# Luminescence

./: .gitignore  CMakeLists.txt  Makefile  Makefile~  README.md  run.sh
Controler/: CMakeLists.txt  Makefile  README.md  arduino-bridge.cpp  arduino-bridge.hpp  controller  controller.cpp  manager.cpp  mapper.cpp
Controler/saves/: dance.txt  doioweyou.txt  goodnight.txt  intro-ghost-town.txt  letithappen.txt  losingmymind.txt  reflections.txt  supersonic.txt  timhsupersonic.txt  vital1.txt
Controler/src/: bridge.h  bridge.hh  controller.cpp  device.h  jack-bridge.cpp  main.cpp  manager.cpp  transport.h
Controler/src/bridges/: adaptors.h  tcp.cpp  tcp.h
Controler/src/device/: device.cpp  device.h  factory.cpp  factory.h  manager.h
Controler/src/device/transport/: factory.cpp  factory.h  transport.h
Controler/src/device/transport/transports/: dummy.h  factory.cpp  factory.h  fd-proxy.cpp  fd-proxy.h  serial.cpp  serial.h  tcp.cpp  tcp.h
Controler/src/exec/: json-ctrl.cpp
Controler/src/midi/: bridge.h
Controler/src/midi/bridges/: dummy.h  jack-bridge.cpp  jack-bridge.h
Controler/src/transport/: factory.h  transport.h
Controler/src/transport/transports/: fd-proxy.cpp  fd-proxy.h  serial.cpp  serial.h  tcp.cpp  tcp.h
Controler/src/transports/: serial.cpp  serial.h  tcp.cpp  tcp.h
Controler/src/utils/: json.h  lock.h  visitor.h
Controler/tests/: tests-midi-device.cpp
Driver/: CMakeLists.txt  Composition.h  Constants.h  Driver.ino  Mask.h  clock.h  color_palette.h  common.h  driver.ino  math.h  state.h
Driver-v2/: Driver-v2.ino
Hardware/: README.md
Lox/: Lox.ino
TCP-Bridge/: CMakeLists.txt  Optopoulpe.plp  apc40-mapping  arduino-serial-lib.c  arduino.h  controller  jack_proxy.cpp  run-a2c.sh  run-ctrl.sh  save.txt  setup.txt.save
config/: devices.json  devices.txt  due.json  save.txt  setup.txt
controler/: .arduino-bridge.hpp.swp  Makefile  arduino-bridge.cpp  arduino-bridge.hpp  controler.ino  controller  controller.cpp  jack-bridge.cpp  jack-bridge.hpp  jack_proxy  jack_proxy.cpp  manager.cpp  manager.hpp  mapper.cpp  mapper.hpp  midi-device.hpp  thread-queue.hpp
controller/: CMakeLists.txt  controller.cpp  jack-bridge.hpp  mapper.hpp  midi-device.hpp
controller/saves/: letithappen.txt
driver/: Composition.h  Constants.h  Mask.h  OscillatorKind.h  PaletteRangeController.h  README.md  Slicer.h  _Readme.md  apply_modulation.cpp  apply_modulation.h  clock.h  color_palette.cpp  color_palette.h  common.h  driver.h  driver.ino  math.h  palettes.h  params.h  range.h  state.h  sync.h  types.h  utils.h
jackproxy/: .setup.txt.swp  Makefile  Optopoulpe.plp  README.md  apc40-bridge  apc40-bridge.cpp  apc40-mapping  apc40-mapping.cpp  apc40.h  arduino-bridge  arduino-bridge.c  arduino.h  controller  controller.cpp  dump  jack_proxy  jack_proxy.cpp  jackproxy-from-stdin  jackproxy-from-stdin.c  jackproxy-to-stdout  jackproxy-to-stdout.c  midihash.h  miditest.cpp  obj.h  run-arduino.sh  run-c2a.sh  run-ctrl.sh  run-mapper.sh  run-master.sh  run-solo0.sh  run-solo1.sh  save.txt  setup.txt  topc
legacy/: common.h
netbridge/: Makefile  netbridge-client.c  netbridge-recv  netbridge-recv.c  netbridge-send  netbridge-send.c  netbridge-server  netbridge-server.c
test_jules/: ColorPalette.h  Comet.h  Effect.h  Effects.cpp  Effects.h  EffectsMixer.cpp  EffectsMixer.h  GeneratorInput.h  Generators.cpp  Generators.h  MyEffects.cpp  MyEffects.h  MyFinalEffects.cpp  _README.md  test_jules.ino  util.h  vec3.h
test_templates/: Blink.ino  (+8 more)
(+58 files in other folders)
